# peak6-the-pit

./: .gitignore  ERROR_FIX_LOG.md  FUTURE_FEATURES.md  MEMO.md  PRD.md  PRESEARCH.md  README.md  SYSTEM_EXPLANATION.md  TASK_LIST.md  TECH_STACK.md  USER_FLOW.md  docker-compose.staging.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railpack.json  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_09_add_badges_avatar_bio.py  2026_03_09_add_embedding_cache_table.py  2026_03_11_add_bookmarks_table.py  2026_03_11_add_cohort_and_peer_reviews.py  2026_03_11_add_daily_challenges_table.py  2026_03_11_add_has_onboarded_to_users.py  2026_03_11_add_learning_paths.py  2026_03_11_add_xp_level_check_constraints.py  2026_03_11_merge_heads.py  2026_03_11_scale_xp_totals_for_new_economy.py  2026_03_12_add_activity_events_and_study_groups.py  (+10 more)
backend/app/: config.py  constants.py  database.py  generate_content_bank.py  ingest_docs.py  main.py  seed.py
backend/evals/: run_chat_golden_checks.py  run_golden_checks.py
backend/tests/: test_auth.py  test_badges.py  test_chat_golden_sets.py  test_constants.py  test_events.py  test_golden_sets.py  test_grading_agent.py  test_leaderboard.py  test_mastery_service.py  test_mcq_generation.py  test_mcq_grading.py  test_mcq_pool.py  test_mentorship_service.py  test_metrics_router.py  test_notifications.py  test_perf_metrics.py  test_progression.py  test_prompt_builder.py  test_rag.py  test_scenario_engine.py  test_scenario_generation_langgraph.py  test_users.py
(+212 files in other folders)
